[package]
name = "pokedb"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
plotters = "0.3.7"
polars = { version = "0.43.1", features = ["serde"] }
postgres = { version = "0.19.8", features = ["with-serde_json-1"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
